Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-10-21 (SVN):
    * console.c: made hexen2 version of Con_DrawNotify() to distinguish
      say and say_team like hexenworld does, which adds the necessity of
      horizontal scrolling. some cleanups in both hexen2 and hexenworld
      versions.
    * keys.c: minor cleanup.
    * updated version date stamp to 2012-10-21.

2012-10-20 (SVN):
    * added IN_UpdateForKeydest() as a new helper who does stuff if the
      key_dest changes matter to the keyboard driver, e.g. sending KP_
      key decisions, or SDL unicode stuff. making it a separate helper
      eliminates the per-key event check on windows in MapKey(). we run
      it every frame either before Sys_SendKeyEvents(), or from within
      Key_ForceDest() for now. IN_UpdateForKeydest() an empty function
      for dos and svgalib targets.

2012-10-20 (SVN):
    * cl_main.c (CL_Disconnect): call Key_EndChat() to not get stuck in
      chat mode.
    * keys.c (Key_ForceDest): now that key_message is guaranteed to be
      set only in game mode, removed its cases. also changed the return
      statements to break for consistency.

2012-10-20 (SVN):
    * made chat_buffer[] and chat_bufferlen static to keys.c. console.c
      will now use the new Key_GetChatBuffer() and Key_GetChatMsgLen()
      accessor functions. renamed the team_message global of hexen2 to
      chat_team as in hexenworld. added Key_EndChat() as a new helper.

2012-10-20 (SVN):
    * vid_dos.h (vmode_t): changed width, height and rowbytes members to
      signed int.

2012-10-20 (SVN):
    * console.c (Con_MessageMode_f, Con_MessageMode2_f): do not set the
      messagemode when not really connected.

2012-10-20 (SVN):
    * allow 8x fsaa in the menu system and the gtk launcher.
    * updated version date stamp to 2012-10-20.

2012-10-15 (SVN):
    * fixed hexenworld after r4989. updated date stamp to 2012-10-15.

2012-10-15 (SVN):