@@ -42,10 +42,12 @@ fixed16_t	sadjust, tadjust, bbextents, bbextentt;
 
 pixel_t		*cacheblock;
 int		cachewidth;
+
 pixel_t		*d_viewbuffer;
+
 short		*d_pzbuffer;
-unsigned int	d_zrowbytes;
-unsigned int	d_zwidth;
+int		d_zrowbytes;
+int		d_zwidth;
 
 #endif	/* !id386 */
 
